# fin-Health

./: .gitignore  .lintr  .nojekyll  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  LICENSE.html  README.html  README.md  _quarto.yml  description.md  environment.yml  pyproject.toml  requirements.txt  search.json
.github/workflows/: ai-critic-issues.yml  ai-critic-pr.yml  ci.yml  docs-preview.yml  docs-publish.yml
assets/: custom_styles.css  r_overrides.css
data/raw/: financial_statement_empty.csv
src/: app.R  data.R  manifest.json
src/charts/: ggplot_charts.R
src/components/: kpi_card.R
src/pages/: sector.R
